fix: add overflow-x: auto to pre tags without language classname

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,6 +31,9 @@
   ul {
     @apply list-inside;
   }
+  pre {
+    overflow-x: auto;
+  }
 }
 
 @layer components {
